--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -1,6 +1,8 @@
 FROM centos:latest
 LABEL Name="cloudpea/pdu-operations"
-RUN ls -al
+
+COPY cert.pem /etc/pki/ca-trust/source/anchors
+RUN update-ca-trust force-enable && update-ca-trust extract
 
 RUN yum -y install \
         epel-release \
