--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -1,5 +1,5 @@
 FROM centos:latest
-LABEL Name="cloudpea/pdu-operations"
+LABEL Name="bourgeoisrebel/azadmin-centos"
 
 COPY /cert.pem /etc/pki/ca-trust/source/anchors
 RUN update-ca-trust force-enable && update-ca-trust extract
