--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu
+FROM ubuntu:18.04
 
 LABEL Name="bourgeoisrebel/azadmin"
 
@@ -25,13 +25,13 @@ RUN curl -sL https://packages.microsoft.com/keys/microsoft.asc | \
 RUN wget https://releases.hashicorp.com/terraform/0.12.24/terraform_0.12.24_linux_amd64.zip --no-check-certificate && \
     unzip ./terraform_0.12.24_linux_amd64.zip -d /usr/local/bin/
 
-# # Install powershell
-# RUN for apt_file in `grep -lr microsoft /etc/apt/sources.list.d/`; do rm $apt_file; done && \
-#     apt-get update && apt-get install -y apt-transport-https && \
-#     curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
-#     sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-debian-jessie-prod jessie main" > /etc/apt/sources.list.d/microsoft.list'  && \
-#     apt-get update && \
-#     apt-get install -y powershell
+# Install powershell
+RUN for apt_file in `grep -lr microsoft /etc/apt/sources.list.d/`; do rm $apt_file; done && \
+    apt-get update && apt-get install -y apt-transport-https && \
+    curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
+    sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-debian-jessie-prod jessie main" > /etc/apt/sources.list.d/microsoft.list'  && \
+    apt-get update && \
+    apt-get install -y powershell
  
 # Install helm/tiller
 RUN HELM_VERSION=v2.16.1 && \
