--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -10,6 +10,7 @@ RUN chmod 644 /usr/local/share/ca-certificates/Zscaler_Root_CA.crt && \
 RUN cd /tmp && \
     apt update && \
     apt-get install -y wget unzip curl lsb-release gnupg python3-pip python3-minimal
+    apt-get install git
 
 # Install Azure CLI
 RUN apt-get update && apt-get install -y apt-transport-https ca-certificates  && \
